crates/swc-optimizer/core/src/snapshots/qwik_core__test__lib_mode_fn_signal.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";
export const Counter = component$(() => {
  const count = useSignal(0);

  return (
    <div>
      <p>Count: {count.value}</p>
      <p>
        <button onClick$={() => count.value++}>Increment</button>
      </p>
    </div>
  );
});

=== test.ts ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Counter_component_XXXXXXXXXXXX");
export const Counter = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Counter_component_XXXXXXXXXXXX"),
);

=== test.tsx_Counter_component_XXXXXXXXXXXX.ts === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_Counter_component_div_p_button_q_e_click_XXXXXXXXXXXX");
export const Counter_component_XXXXXXXXXXXX = () => {
  const count = useSignal(0);
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    null,
    [
      /* @__PURE__ */ _jsxSorted("p", null, null, ["Count: ", _wrapProp(count)], 3, null),
      /* @__PURE__ */ _jsxSorted(
        "p",
        null,
        null,
        /* @__PURE__ */ _jsxSorted(
          "button",
          null,
          {
            "q-e:click": /* @__PURE__ */ qrl(
              i_XXXXXXXXXXXX,
              "Counter_component_div_p_button_q_e_click_XXXXXXXXXXXX",
              [count],
            ),
          },
          "Increment",
          3,
          null,
        ),
        3,
        null,
      ),
    ],
    3,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Counter_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Counter_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Counter_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Counter_component_div_p_button_q_e_click_XXXXXXXXXXXX.ts === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const Counter_component_div_p_button_q_e_click_XXXXXXXXXXXX = () => {
  const count = _captures[0];
  return count.value++;
};

/*
{
  "origin": "test.tsx",
  "name": "Counter_component_div_p_button_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Counter_component_div_p_button_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Counter_component_div_p_button_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "ts",
  "parent": "Counter_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "count"
  ]
}
*/

=== DIAGNOSTICS ===

[]
