crates/swc-optimizer/core/src/snapshots/qwik_core__test__relative_paths.snap
---
source: src/test.rs
expression: output
---

=== ../../node_modules/dep/dist/lib.mjs ===
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./lib.mjs_App_component_XXXXXXXXXXXX.js");
import { componentQrl, useStore } from "@qwik.dev/core";
const useData = () => {
  return useStore({
    count: 0,
  });
};
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);
export { useData as _auto_useData };

=== components/main.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./main.tsx_Local_component_XXXXXXXXXXXX.js");
export const Local = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Local_component_XXXXXXXXXXXX"),
);

=== components/main.tsx_Local_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { state } from "./sibling";
export const Local_component_XXXXXXXXXXXX = () => {
  return /* @__PURE__ */ _jsxSorted("div", null, null, state, 3, "zp_0");
};

/*
{
  "origin": "components/main.tsx",
  "name": "Local_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "main.tsx_Local_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "main.tsx_Local_component_XXXXXXXXXXXX",
  "path": "components",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== ../../node_modules/dep/dist/lib.mjs_App_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _auto_useData as useData } from "./lib.mjs";
const i_XXXXXXXXXXXX = () => import("./lib.mjs_App_component_div_p_button_onClick_XXXXXXXXXXXX.js");
export const App_component_XXXXXXXXXXXX = () => {
  const store = useData();
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    null,
    [
      /* @__PURE__ */ _jsxSorted("p", null, null, ["Count: ", _wrapProp(store, "count")], 3, null),
      /* @__PURE__ */ _jsxSorted(
        "p",
        null,
        null,
        /* @__PURE__ */ _jsxSorted(
          "button",
          {
            "q-e:click": /* @__PURE__ */ qrl(
              i_XXXXXXXXXXXX,
              "App_component_div_p_button_onClick_XXXXXXXXXXXX",
              [store],
            ),
          },
          null,
          "Click",
          2,
          null,
        ),
        1,
        null,
      ),
    ],
    1,
    "70_0",
  );
};

/*
{
  "origin": "../../node_modules/dep/dist/lib.mjs",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "lib.mjs_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "lib.mjs_App_component_XXXXXXXXXXXX",
  "path": "../../node_modules/dep/dist",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== ../../node_modules/dep/dist/lib.mjs_App_component_div_p_button_onClick_XXXXXXXXXXXX.js === (ENTRY)
import { useLexicalScope } from "@qwik.dev/core";
export const App_component_div_p_button_onClick_XXXXXXXXXXXX = () => {
  const [store] = useLexicalScope();
  return store.count++;
};

/*
{
  "origin": "../../node_modules/dep/dist/lib.mjs",
  "name": "App_component_div_p_button_onClick_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "lib.mjs_App_component_div_p_button_onClick",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "lib.mjs_App_component_div_p_button_onClick_XXXXXXXXXXXX",
  "path": "../../node_modules/dep/dist",
  "extension": "js",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "q-e:click",
  "captures": true,
  "captureNames": [
    "store"
  ]
}
*/

=== DIAGNOSTICS ===

[]
