crates/swc-optimizer/core/src/snapshots/qwik_core__test__rename_builder_io.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$ } from "@builder.io/qwik";
import { isDev } from "@builder.io/qwik/build";
import { stuff } from "@builder.io/qwik-city";
import { moreStuff } from "@builder.io/qwik-city/more/here";
import { qwikify$ } from "@builder.io/qwik-react";
import sdk from "@builder.io/sdk";

export const Foo = qwikify$(MyReactComponent);

export const Bar = $("a thing");

export const App = component$(() => {
  sdk.hello();
  if (isDev) {
    stuff();
  } else {
    moreStuff();
  }
  return "hi";
});

=== test.ts ===
import { qwikifyQrl } from "@qwik.dev/react";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_qwikify_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Bar_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX");
export const Foo = qwikifyQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_qwikify_XXXXXXXXXXXX"));
export const Bar = /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Bar_XXXXXXXXXXXX");
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);

=== test.tsx_Foo_qwikify_XXXXXXXXXXXX.ts === (ENTRY)
export const Foo_qwikify_XXXXXXXXXXXX = MyReactComponent;

/*
{
  "origin": "test.tsx",
  "name": "Foo_qwikify_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_qwikify",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_qwikify_XXXXXXXXXXXX",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "qwikify$",
  "captures": false
}
*/

=== test.tsx_Bar_XXXXXXXXXXXX.ts === (ENTRY)
export const Bar_XXXXXXXXXXXX = "a thing";

/*
{
  "origin": "test.tsx",
  "name": "Bar_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Bar",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Bar_XXXXXXXXXXXX",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/

=== test.tsx_App_component_XXXXXXXXXXXX.ts === (ENTRY)
import { isDev } from "@qwik.dev/core/build";
import { moreStuff } from "@qwik.dev/router/more/here";
import sdk from "@builder.io/sdk";
import { stuff } from "@qwik.dev/router";
export const App_component_XXXXXXXXXXXX = () => {
  sdk.hello();
  if (isDev) stuff();
  else moreStuff();
  return "hi";
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
